# HidroAliaga

./: .gitignore  AUDITORIA_LANDING_PAGE.md  DATABASE.md  ERRORES_Y_SOLUCIONES.md  INSTALLATION.md  INSTRUCCIONES PROFESIONALES PARA EL DESARROLLO DEL SISTEMA.docx  LOGO_HIDROALIAGA.md  MEJORAS_IMPLEMENTADAS_10_10.md  Prd.md  README.md  RED DE DISTB. ABIERTA CON Ø PULG Y MM.xlsx  SECURITY_IMPLEMENTATION.md  TESTING_GUIDE.md  TESTING_REPORT.md  check-schema.js  excel_analysis.txt  install_dependencies.sh  package.json  vercel.json  verify_files.py  verify_installation.py  verify_system.py
backend/: .env.example  debug_auth.py  debug_testclient.py  main.py  pyproject.toml  test_output.txt  test_output2.txt  test_results.txt
backend/app/: __init__.py
backend/app/config/: settings.py
backend/app/core/: __init__.py  auth.py  hidraulico.py  normativa.py  optimizador.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/routers/: __init__.py  calculos.py  gis.py  normativa.py  optimizacion.py  proyectos.py  reportes.py
backend/app/schemas/: __init__.py  schemas.py
backend/scripts/: apply_rls.py  scan_regions.py  verify_rls.py
backend/tests/: conftest.py  stress_test.py  test_auth.py  test_integration.py
database/: add_clase_tuberia.sql  add_descripcion.sql  add_reference_fields.sql  add_updated_at.sql  add_viviendas.sql  fix_proyectos_columns.sql  fix_proyectos_schema.sql  migrate.mjs  migrate_user_isolation.sql  run-migration.mjs
docs/: CONTRIBUTING.md  test-credentials.md
frontend/: index.html  (+9 more)
(+231 files in other folders)
